Reduce the simple usage of guava where java has caught up